@@ -2,6 +2,8 @@ Changes in version 0.2.0.7-alpha - 2007-??-??
   o Minor features (security):
     - As a client, do not believe any server that tells us that any address
       maps to an internal address space.
+    - Make it possible to enable HashedControlPassword and
+      CookieAuthentication at the same time.
 
   o Minor features (guard nodes):
     - Tag every guard node in our state file with the version that we believe
